<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NFC-Data-Transfer-App</string>
    <string name="app_title">NFC Трансфер на Данни</string>
    <string name="select_images">Избери Снимки</string>
    <string name="select_images_desc">Бутон за избор на снимки от галерията</string>
    <string name="no_images_selected">Няма избрани файлове</string>
    <string name="send_via_nfc">Изпрати чрез NFC</string>
    <string name="send_via_nfc_desc">Бутон за изпращане на избраните файлове чрез NFC</string>
    <string name="image_preview_container">Област за преглед на избраните файлове</string>
    <string name="file_icon">Икона на файл</string>
    <string name="remove_file">Премахни файл</string>
    <string name="file_list_description">Списък с избрани файлове за трансфер</string>
    <string name="switch_to_en">EN</string>
    <string name="switch_to_bg">БГ</string>
    <string name="add_files">Добави</string>
    <string name="transfer_files">Прехвърли Файлове</string>
    <string name="files_selected">%d избрани файла</string>
    <string name="file_selected">%d избран файл</string>
    <string name="empty_state_title">Няма избрани файлове</string>
    <string name="empty_state_desc">Натиснете \'Добави Файлове\' за да започнете</string>
    <string name="permission_required">Необходим е достъп до хранилището за избор на файлове.</string>
    <string name="install_file_manager">Моля, инсталирайте Файлов Мениджър.</string>
    <string name="select_files">Избери Файлове</string>

    <!-- main screen -->
    <string name="welcome_message">Quick Share</string>
    <string name="send_files">Изпрати файлове</string>
    <string name="receive_files">Получи файлове</string>
    <string name="app_logo">Лого на приложението</string>
    <string name="about">За приложението</string>
    <string name="version">Версия 1.0.0</string>
    <string name="features">Функционалности</string>
    <string name="features_description">• Бърз и сигурен NFC трансфер на файлове\n• Поддръжка на всички видове файлове\n• Лесен за използване интерфейс\n• Не е необходима интернет връзка\n• Директен трансфер между устройства\n• Сигурен пренос на данни</string>
    <string name="developer">Разработчик</string>
    <string name="developer_info">Разработено от PMU\nКонтакт: support@pmu.com\n\nТова приложение е създадено да направи споделянето на файлове между устройства лесно и сигурно чрез NFC технология.</string>

    <!-- File Adapter -->
    <string name="transfer_files_description">Започнете прехвърлянето на избраните файлове</string>
    <string name="empty_file_list_icon_description">Икона за липса на файлове</string>
    <string name="list_of_files_to_transfer">Списък с избрани файлове за прехвърляне</string>
    <string name="add_files_description">Изберете допълнителни файлове за прехвърляне</string>
    <string name="initiate_transfer">Започни прехвърляне</string>


    <!-- Transfer Progress Activity -->
    <string name="transfer_in_progress">Трансфер в процес</string>
    <string name="preparing_files">Подготовка на файловете...</string>
    <string name="files_being_transferred">Файлове за трансфер</string>
    <string name="cancel_transfer">Отказ</string>
    <string name="files_sent_successfully">Файловете са успешно изпратени!</string>
    <string name="done">Готово</string>
    <string name="file_transfer_status">Статус на трансфера на файла</string>
    <string name="transfer_failed">Трансферът е неуспешен</string>
    <string name="transfer_canceled">Трансферът е отказан</string>
    <string name="transfer_of">Трансфер на %1$d от %2$d файла (%3$d%%)</string>
    <string name="transfer_summary">%1$d файла (%2$s)</string>
    <string name="file_status_pending">Изчакване</string>
    <string name="file_status_in_progress">В процес</string>
    <string name="file_status_completed">Завършен</string>
    <string name="file_status_failed">Неуспешен</string>
    <string name="list_of_files_being_transferred">Списък на прехвърляните файлове</string>

    <!-- File Recieve  -->
    <string name="receiving_files">Получаване на файлове</string>
    <string name="waiting_for_files">Изчакване на файлове...</string>
    <string name="connecting_to_sender">Свързване със подателя...</string>
    <string name="receiving_file_info">Получаване на информация за файла...</string>
    <string name="files_being_received">Получаване на файлове</string>
    <string name="list_of_files_being_received">Списък на получаваните файлове</string>
    <string name="cancel_receive">Отказ</string>
    <string name="receive_canceled">Получаването е отказано</string>
    <string name="files_received_successfully">Файловете са получени успешно!</string>
    <string name="receive_progress">Получени %1$d от %2$d файла (%3$d%%)</string>
    <string name="receive_summary">Получихте %1$d файла (%2$s)</string>

    <!-- History   -->
    <string name="transfer_history">История</string>
    <string name="view_details">Преглед на детайлите</string>
    <string name="no_history">Няма история на прехвърляния</string>
    <string name="history_will_appear">Историята на прехвърлянията на файлове ще се появи тук</string>
    <string name="files_sent">Изпратени файлове</string>
    <string name="files_received">Получени файлове</string>
    <string name="total_files">%1$d файла</string>
    <string name="total_size">%1$s общо</string>
    <string name="transfer_partial_summary">Неусшено прехвърляне</string>
    <string name="receive_failed">Получаването е неуспешно</string>
    <string name="sending_files">Изщане на файлове</string>


    <!-- Mac address -->
    <string name="enter_mac_address">Въведете Bluetooth MAC адрес</string>
    <string name="mac_address_description">Моля, въведете MAC адреса на вашето устройство</string>
    <string name="mac_address_hint">Пример: 00:11:22:33:44:55</string>
    <string name="invalid_mac_address_format">Моля, въведете валиден MAC адрес (формат: XX:XX:XX:XX:XX:XX)</string>
    <string name="connect">Свързване</string>
    <string name="cancel">Отказ</string>

    <string name="please_bring_device_closer">Моля приближете устройство</string>

    <string name="change_mac_address">Смени Адрес</string>
    <string name="change_your_address">Смени своя адрес</string>
    <string name="enter_new_mac_address">Въведете новия MAC адрес на устройството</string>
</resources>